Fixes to project-page. Added letter spacing on primary-heading.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -54,6 +54,7 @@ body {
 .primary-heading{
   font-size: var(--page-title-font-size);
   text-transform: uppercase;
+  letter-spacing: .5rem;
 }
 
 .secondary-heading{
@@ -72,6 +73,8 @@ body {
 	color: var(--color-grey);
   font-size: var(--text-font-size);
   line-height: 2.7rem;
+  display: block;
+  max-width: 60ch;
 }
 
 .text--small{
