--- a/src/css/pages/project.css
+++ b/src/css/pages/project.css
@@ -30,3 +30,7 @@
 .project-video{
     width: 100vw;
 }
+
+.project-video video{
+    width: 100%;
+}
